Added Edit Functionality and Basic Dashboard Layout

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -86,4 +86,4 @@
                 method: :delete %>
 </div>
 
-<%= link_to "Back", root_path %>
+<%= link_to "Back", personal_info_path, class: "btn btn-secondary" %>
