Add hint for sign up and login fields

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -188,3 +188,10 @@ body {
 .signup-footer a:hover {
   text-decoration: underline;
 }
+
+.hint {
+	font-size: 0.85em;
+	color: #666;
+	margin-top: 4px;
+}
+
