--- a/app/views/dashboard/personal_info.html.erb
+++ b/app/views/dashboard/personal_info.html.erb
@@ -1,13 +1,14 @@
-<h2>Your Personal Information</h2>
+<div class="info-container text-center">
+  <h2 class="page-title">Personal Information</h2>
 
-<ul>
-  <li><strong>Full Name:</strong> <%= @user.full_name %></li>
-  <li><strong>Email:</strong> <%= @user.email %></li>
-  <li><strong>Phone:</strong> <%= @user.phone %></li>
-</ul>
+  <ul class="list-group my-4">
+    <li class="list-group-item"><strong>Full Name:</strong> <%= @user.full_name %></li>
+    <li class="list-group-item"><strong>Email:</strong> <%= @user.email %></li>
+    <li class="list-group-item"><strong>Phone:</strong> <%= @user.phone %></li>
+  </ul>
 
-<%= button_to "Back to Dashboard", dashboard_path, method: :get, class: "btn btn-secondary" %>
-<br>
-<%= button_to "Edit Profile", edit_user_registration_path, method: :get, class: "btn btn-primary" %>
-<br>
-<%= button_to "Log out", destroy_user_session_path, method: :delete, class: "btn btn-danger" %>
+  <div class="info-buttons">
+    <%= link_to "Edit Profile", edit_user_registration_path, class: "btn btn-primary w-100" %>
+    <%= link_to "Back to Dashboard", dashboard_path, class: "btn btn-secondary w-100" %>
+  </div>
+</div>
