--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,8 +28,8 @@
       <div class="navbar-brand">Job Tracker</div>
       <div class="navbar-actions">
         <% if user_signed_in? %>
-          <%= link_to "Dashboard", dashboard_path, class: "btn btn-primary" %>
-          <%= link_to "Profile", edit_user_registration_path, class: "btn btn-secondary" %>\
+          <%= button_to "Personal Info", personal_info_path, method: :get, class: "btn btn-primary" %>
+          <%= button_to "Log out", destroy_user_session_path, method: :delete, class: "btn btn-danger" %>
         <% else %>
           <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-primary" %>
           <%= link_to "Login", new_user_session_path, class: "btn btn-secondary" %>
