--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -18,6 +18,8 @@
   <div class="field">
     <%= form.label :company_id, "Company" %>
     <%= form.collection_select :company_id, Company.all, :id, :name, prompt: "Select Company" %>
+    <br>
+    <%= link_to 'Add New Company', new_company_path, target: '_blank', class: 'btn btn-link' %>
   </div>
 
   <div class="field">
