--- a/app/views/jobs/_index.html.erb
+++ b/app/views/jobs/_index.html.erb
@@ -1,6 +1,11 @@
+
 <h1>My Job Applications</h1>
 
 <%= link_to 'New Job Application', new_job_path, class: 'btn btn-primary' %>
+
+<div class="mb-3" data-controller="job-search">
+  <input type="text" data-job-search-target="input" class="form-control" placeholder="Search jobs by title or company...">
+</div>
 
 <table>
   <thead>
@@ -13,17 +18,6 @@
     </tr>
   </thead>
   <tbody>
-    <% @jobs.each do |job| %>
-      <tr>
-        <td><%= link_to job.title, job_path(job) %></td>
-        <td><%= job.company&.name %></td>
-        <td><%= job.status %></td>
-        <td><%= job.deadline %></td>
-        <td>
-          <%= link_to 'Edit', edit_job_path(job) %> |
-          <%= link_to 'Delete', job_path(job), method: :delete, data: { confirm: 'Are you sure?' } %>
-        </td>
-      </tr>
-    <% end %>
+    <%= render partial: 'jobs/rows', locals: { jobs: @jobs } %>
   </tbody>
 </table>
