--- a/app/views/jobs/_rows.html.erb
+++ b/app/views/jobs/_rows.html.erb
@@ -1,4 +1,4 @@
-<% jobs.each do |job| %>
+<% (jobs || []).each do |job| %>
   <tr>
     <td><%= link_to job.title, job_path(job) %></td>
     <td><%= job.company&.name %></td>
