Ensured that Edit/Delete CRUD operations redirect back to dashboard

--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -44,5 +44,6 @@
 
   <div class="actions">
     <%= form.submit %>
+    <%= link_to 'Cancel', dashboard_path, class: 'btn btn-light ms-2' %>
   </div>
 <% end %>
