--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -8,4 +8,4 @@
 <p><strong>Notes:</strong> <%= @job.notes %></p>
 
 <%= link_to 'Edit', edit_job_path(@job), class: 'btn btn-secondary' %>
-<%= link_to 'Back', jobs_path, class: 'btn btn-light' %>
+<%= link_to 'Back', dashboard_path, class: 'btn btn-light' %>
