--- a/app/views/jobs/_rows.html.erb
+++ b/app/views/jobs/_rows.html.erb
@@ -5,8 +5,8 @@
     <td><%= job.status %></td>
     <td><%= job.deadline %></td>
     <td>
-      <%= link_to 'Edit', edit_job_path(job) %> |
-      <%= link_to 'Delete', job_path(job), method: :delete, data: { confirm: 'Are you sure?' } %>
+  <%= link_to 'Edit', edit_job_path(job) %> |
+  <%= button_to 'Delete', job_path(job), method: :delete, data: { confirm: 'Are you sure?' }, form: { class: 'd-inline' }, class: 'btn btn-link p-0' %>
     </td>
   </tr>
 <% end %>
