Added responsive search bar to filter jobs by title and/or company

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -10,7 +10,7 @@
             <div class="card mb-3">
               <div class="card-body">
                 <h5><%= job.title %></h5>
-                <p><strong>Company:</strong> <%= job.company.name %></p>
+                <p><strong>Company:</strong> <%= job.company&.name %></p>
               </div>
             </div>
             <!-- Add Job Button -->
