--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -2,10 +2,23 @@
 
 <%= link_to 'New Company', new_company_path, class: 'btn btn-primary' %>
 
-<ul>
-  <% @companies.each do |company| %>
-    <li>
-      <%= link_to company.name, company_path(company) %>
-    </li>
-  <% end %>
-</ul>
+<table>
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Website</th>
+      <th>Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @companies.each do |company| %>
+      <tr>
+        <td><%= link_to company.name, company_path(company) %></td>
+        <td><%= company.website %></td>
+        <td>
+          <%= link_to 'Show', company_path(company) %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
