--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New Company</h1>
 
-<%= form_with(model: @company, local: true) do |form| %>
+<%= form_with model: @company, local: true do |form| %>
   <% if @company.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@company.errors.count, "error") %> prohibited this company from being saved:</h2>
@@ -19,7 +19,7 @@
 
   <div class="field">
     <%= form.label :website %>
-    <%= form.url_field :website %>
+    <%= form.text_field :website %>
   </div>
 
   <div class="actions">
@@ -27,4 +27,4 @@
   </div>
 <% end %>
 
-<%= link_to 'Back', companies_path, class: 'btn btn-light' %>
+<%= link_to 'Back', companies_path %>
