--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', job: @job %>
 
-<%= link_to 'Back', dashboard_path, class: 'btn btn-light' %>
+<%= link_to 'Back', jobs_path %>
