--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,11 +1,11 @@
-<h1>Job Details</h1>
+<h1><%= @job.title %></h1>
 
-<p><strong>Title:</strong> <%= @job.title %></p>
 <p><strong>Company:</strong> <%= @job.company&.name %></p>
-<p><strong>Link:</strong> <%= link_to @job.link, @job.link, target: '_blank' %></p>
 <p><strong>Status:</strong> <%= @job.status %></p>
+<p><strong>Link:</strong> <%= link_to @job.link, @job.link if @job.link.present? %></p>
 <p><strong>Deadline:</strong> <%= @job.deadline %></p>
-<p><strong>Notes:</strong> <%= @job.notes %></p>
+<p><strong>Notes:</strong></p>
+<p><%= simple_format(@job.notes) if @job.notes.present? %></p>
 
-<%= link_to 'Edit', edit_job_path(@job), class: 'btn btn-secondary' %>
-<%= link_to 'Back', dashboard_path, class: 'btn btn-light' %>
+<%= link_to 'Edit', edit_job_path(@job) %> |
+<%= link_to 'Back', jobs_path %>
