--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -8,31 +8,9 @@
     <p class="text-center">You have no job applications yet. Click the button above to add one!</p>
   <% end %>
 
-  <table class="table table-striped">
-    <thead class="thead-dark">
-      <tr>
-        <th>Title</th>
-        <th>Company</th>
-        <th>Status</th>
-        <th>Deadline</th>
-        <th>Actions</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @jobs.each do |job| %>
-        <tr>
-          <td><%= link_to job.title, job_path(job) %></td>
-          <td><%= job.company&.name %></td>
-          <td><%= status_badge(job.status) %></td>
-          <td><%= job.deadline.strftime("%B %d, %Y") if job.deadline.present? %></td>
-          <td>
-            <%= link_to 'Edit', edit_job_path(job), class: 'btn btn-sm btn-secondary' %>
-            <%= link_to 'Delete', job_path(job), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' %>
-          </td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
+  <%= turbo_frame_tag "jobs_table" do %>
+    <%= render "jobs_table", jobs: @jobs %>
+  <% end %>
 
   <%# This is the new button, centered at the bottom of the page %>
   <div class="text-center mt-5">
