--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,55 +1,47 @@
-<<<<<<< HEAD
-<h1>Job Applications</h1>
-
-<%= link_to 'New Job Application', new_job_path, class: 'btn btn-primary' %>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Company</th>
-      <th>Status</th>
-      <th>Deadline</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @jobs.each do |job| %>
-      <tr>
-        <td><%= link_to job.title, job_path(job) %></td>
-        <td><%= job.company&.name %></td>
-        <td><%= job.status %></td>
-        <td><%= job.deadline %></td>
-        <td>
-          <%= link_to 'Show', job_path(job) %> |
-          <%= link_to 'Edit', edit_job_path(job) %> |
-          <%= button_to 'Delete', job_path(job), method: :delete, 
-              data: { confirm: 'Are you sure?' }, 
-              form: { class: 'd-inline' }, 
-              class: 'btn btn-link p-0' %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-=======
 <div class="container mt-4">
   <div class="container d-flex justify-content-between align-items-center mt-4">
-  <h1 class="page-title mb-0">My Job Applications</h1>
-  <%= link_to "New Job Application", new_job_path, class: "btn btn-outline-primary" %>
-</div>
+    <h1 class="page-title mb-0">My Job Applications</h1>
+    <%= link_to "New Job Application", new_job_path, class: "btn btn-outline-primary" %>
+  </div>
   <hr>  
+
   <% if @jobs.empty? %>
     <p class="text-center">You have no job applications yet. Click the button above to add one!</p>
+  <% else %>
+    <%= turbo_frame_tag "jobs_table" do %>
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th>Title</th>
+            <th>Company</th>
+            <th>Status</th>
+            <th>Deadline</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @jobs.each do |job| %>
+            <tr>
+              <td><%= link_to job.title, job_path(job) %></td>
+              <td><%= job.company&.name %></td>
+              <td><%= job.status %></td>
+              <td><%= job.deadline %></td>
+              <td>
+                <%= link_to 'Show', job_path(job) %> |
+                <%= link_to 'Edit', edit_job_path(job) %> |
+                <%= button_to 'Delete', job_path(job), method: :delete, 
+                    data: { confirm: 'Are you sure?' }, 
+                    form: { class: 'd-inline' }, 
+                    class: 'btn btn-link p-0' %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    <% end %>
   <% end %>
 
-  <%= turbo_frame_tag "jobs_table" do %>
-    <%= render "jobs_table", jobs: @jobs %>
-  <% end %>
-
-  <%# This is the new button, centered at the bottom of the page %>
   <div class="text-center mt-5">
     <%= link_to "Return to Dashboard", dashboard_path, class: "btn btn-secondary" %>
   </div>
 </div>
->>>>>>> main
