--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -9,7 +9,7 @@
       <div class="row text-center fw-semibold">
         <div class="col-md-3">
           <h4>📩 Applied</h4>
-          <% Job.with_status("applied").each do |job| %>
+          <% current_user.jobs.with_status("applied").each do |job| %>
             <div class="card mb-3 job-card applied">
               <div class="card-body">
                 <h5><%= job.title %></h5>
@@ -21,11 +21,11 @@
         </div>
         <div class="col-md-3">
           <h4>📞 Interview</h4>
-          <% Job.with_status("interview").each do |job| %>
+          <% current_user.jobs.with_status("interview").each do |job| %>
             <div class="card mb-3 job-card interview">
               <div class="card-body">
                 <h5><%= job.title %></h5>
-                <p><strong>Company:</strong> <%= job.company.name %></p>
+                <p><strong>Company:</strong> <%= job.company&.name %></p>
               </div>
             </div>
           <% end %>
@@ -33,11 +33,11 @@
         </div>
         <div class="col-md-3">
           <h4>✅ Offer</h4>
-          <% Job.with_status("offer").each do |job| %>
+          <% current_user.jobs.with_status("offer").each do |job| %>
             <div class="card mb-3 job-card offer">
               <div class="card-body">
                 <h5><%= job.title %></h5>
-                <p><strong>Company:</strong> <%= job.company.name %></p>
+                <p><strong>Company:</strong> <%= job.company&.name %></p>
               </div>
             </div>
           <% end %>
@@ -45,11 +45,11 @@
         </div>
         <div class="col-md-3">
           <h4>❌ Rejected</h4>
-          <% Job.with_status("rejected").each do |job| %>
+          <% current_user.jobs.with_status("rejected").each do |job| %>
             <div class="card mb-3 job-card rejected">
               <div class="card-body">
                 <h5><%= job.title %></h5>
-                <p><strong>Company:</strong> <%= job.company.name %></p>
+                <p><strong>Company:</strong> <%= job.company&.name %></p>
               </div>
             </div>
           <% end %>
