--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -8,37 +8,32 @@
   <% if @jobs.empty? %>
     <p class="text-center">You have no job applications yet. Click the button above to add one!</p>
   <% else %>
-    <%= turbo_frame_tag "jobs_table" do %>
-      <table class="table table-striped">
-        <thead>
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>Company</th>
+          <th>Status</th>
+          <th>Deadline</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @jobs.each do |job| %>
           <tr>
-            <th>Title</th>
-            <th>Company</th>
-            <th>Status</th>
-            <th>Deadline</th>
-            <th>Actions</th>
+            <td><%= link_to job.title, job_path(job) %></td>
+            <td><%= job.company&.name %></td>
+            <td><%= job.status %></td>
+            <td><%= job.deadline %></td>
+            <td>
+              <%= link_to 'Show', job_path(job) %> |
+              <%= link_to 'Edit', edit_job_path(job) %> |
+              <%= button_to 'Delete', job_path(job), method: :delete, data: { confirm: 'Are you sure?' }, form: { class: 'd-inline' }, class: 'btn btn-link p-0' %>
+            </td>
           </tr>
-        </thead>
-        <tbody>
-          <% @jobs.each do |job| %>
-            <tr>
-              <td><%= link_to job.title, job_path(job) %></td>
-              <td><%= job.company&.name %></td>
-              <td><%= job.status %></td>
-              <td><%= job.deadline %></td>
-              <td>
-                <%= link_to 'Show', job_path(job) %> |
-                <%= link_to 'Edit', edit_job_path(job) %> |
-                <%= button_to 'Delete', job_path(job), method: :delete, 
-                    data: { confirm: 'Are you sure?' }, 
-                    form: { class: 'd-inline' }, 
-                    class: 'btn btn-link p-0' %>
-              </td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
-    <% end %>
+        <% end %>
+      </tbody>
+    </table>
   <% end %>
 
   <div class="text-center mt-5">
