--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', job: @job %>
 
 <%= link_to 'Show', @job %> |
-<%= link_to 'Back', jobs_path %>
+<%= link_to 'Back', dashboard_path %>
