Add system/model tests for company input handling; enforce presence validation for Company fields

--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -14,12 +14,12 @@
 
   <div class="field">
     <%= form.label :name %>
-    <%= form.text_field :name %>
+    <%= form.text_field :name, required: true, autofocus: true %>
   </div>
 
   <div class="field">
     <%= form.label :website %>
-    <%= form.text_field :website %>
+    <%= form.text_field :website, required: true %>
   </div>
 
   <div class="actions">
