tests,CRUD, dashboard flows, UI refresh

--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,24 +1,29 @@
-<h1>Companies</h1>
+<div class="d-flex justify-content-between align-items-center mb-3">
+  <h1>Companies</h1>
+  <%= link_to 'New Company', new_company_path, class: 'btn btn-primary' %>
+</div>
 
-<%= link_to 'New Company', new_company_path, class: 'btn btn-primary' %>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Website</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @companies.each do |company| %>
-      <tr>
-        <td><%= link_to company.name, company_path(company) %></td>
-        <td><%= company.website %></td>
-        <td>
-          <%= link_to 'Show', company_path(company) %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div class="card">
+  <div class="card-body">
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Website</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @companies.each do |company| %>
+          <tr>
+            <td><%= link_to company.name, company_path(company) %></td>
+            <td><%= company.website %></td>
+            <td>
+              <%= link_to 'Show', company_path(company), class: 'btn btn-link p-0' %>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
