--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -74,19 +74,21 @@
 <% if @jobs.empty? %>
   <p class="text-center">You have no job applications yet. Click the button above to add one!</p>
 <% else %>
-  <table class="table table-striped" id="dashboard-jobs-table">
-    <thead>
-      <tr>
-        <th>Title</th>
-        <th>Company</th>
-        <th>Status</th>
-        <th>Deadline</th>
-        <th>Actions</th>
-      </tr>
-    </thead>
-    <tbody>
-      <%= render partial: 'jobs/rows', locals: { jobs: @jobs } %>
-    </tbody>
-  </table>
+  <div class="table-responsive">
+    <table class="table table-striped" id="dashboard-jobs-table">
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>Company</th>
+          <th>Status</th>
+          <th>Deadline</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <%= render partial: 'jobs/rows', locals: { jobs: @jobs } %>
+      </tbody>
+    </table>
+  </div>
 <% end %>
 
