add 1)rspec tests 2)functionality for making job show 'Back' button return to dashboard when opened from dashboard

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -85,8 +85,8 @@
           <th>Actions</th>
         </tr>
       </thead>
-      <tbody>
-        <%= render partial: 'jobs/rows', locals: { jobs: @jobs } %>
+        <tbody>
+        <%= render partial: 'jobs/rows', locals: { jobs: @jobs, from: 'dashboard' } %>
       </tbody>
     </table>
   </div>
