Added HTML for password reset.

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,10 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>Hello <%= @resource.full_name.presence || @resource.email %>,</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>We received a request to reset the password for your account. You can set a new password by clicking the link below:</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p><%= link_to 'Reset my password', edit_password_url(@resource, reset_password_token: @token) %></p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>If you did not make this request, you can safely ignore this email. Your password will remain unchanged until you create a new one using the link above.</p>
+
+<p>Thank you,<br>
+  Job Tracker Support Team</p>
