--- a/app/views/dashboard/personal_info.html.erb
+++ b/app/views/dashboard/personal_info.html.erb
@@ -1,6 +1,16 @@
 <div class="info-container text-center">
   <h2 class="page-title">Personal Information</h2>
 
+  <% if @user.profile_photo.attached? %>
+    <div class="mb-3">
+      <%= image_tag @user.profile_photo.variant(resize_to_fill: [150, 150]), class: "rounded-circle shadow" %>
+    </div>
+  <% else %>
+    <div class="mb-3">
+      <%= image_tag "default-avatar.png", width: 150, class: "rounded-circle shadow" %>
+    </div>
+  <% end %>
+
   <ul class="list-group my-4">
     <li class="list-group-item"><strong>Full Name:</strong> <%= @user.full_name %></li>
     <li class="list-group-item"><strong>Email:</strong> <%= @user.email %></li>
