--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,42 +1,65 @@
 <div class="container mt-4">
-  <div class="container d-flex justify-content-between align-items-center mt-4">
+  <div class="d-flex justify-content-between align-items-center mt-4">
     <h1 class="page-title mb-0">My Job Applications</h1>
     <%= link_to "New Job Application", new_job_path, class: "btn btn-outline-primary" %>
   </div>
-  <hr>  
 
-  <% if @jobs.empty? %>
-    <p class="text-center">You have no job applications yet. Click the button above to add one!</p>
-  <% else %>
-    <table class="table table-striped">
-      <thead>
+  <hr>
+
+  <div class="mb-3" data-controller="job-search">
+    <div class="input-group">
+      <input
+        type="text"
+        data-job-search-target="input"
+        class="form-control"
+        placeholder="Search jobs by title or company..."
+      >
+      <button
+        type="button"
+        data-action="click->job-search#search"
+        class="btn btn-primary"
+      >
+        Search
+      </button>
+    </div>
+  </div>
+
+  <% if @jobs.any? %>
+    <table class="table table-hover" id="jobs-table">
+      <thead class="thead-dark">
         <tr>
-          <th>Title</th>
-          <th>Company</th>
-          <th>Status</th>
-          <th>Deadline</th>
+          <th>
+            <%= link_to "Title #{sort_indicator("title", params[:sort], params[:direction])}".html_safe,
+                        jobs_path(sort: "title", direction: next_direction("title", params[:sort], params[:direction])),
+                        data: { turbo_frame: "jobs_table" } %>
+          </th>
+          <th>
+            <%= link_to "Company #{sort_indicator("company", params[:sort], params[:direction])}".html_safe,
+                        jobs_path(sort: "company", direction: next_direction("company", params[:sort], params[:direction])),
+                        data: { turbo_frame: "jobs_table" } %>
+          </th>
+          <th>
+            <%= link_to "Status #{sort_indicator("status", params[:sort], params[:direction])}".html_safe,
+                        jobs_path(sort: "status", direction: next_direction("status", params[:sort], params[:direction])),
+                        data: { turbo_frame: "jobs_table" } %>
+          </th>
+          <th>
+            <%= link_to "Deadline #{sort_indicator("deadline", params[:sort], params[:direction])}".html_safe,
+                        jobs_path(sort: "deadline", direction: next_direction("deadline", params[:sort], params[:direction])),
+                        data: { turbo_frame: "jobs_table" } %>
+          </th>
           <th>Actions</th>
         </tr>
       </thead>
       <tbody>
-        <% @jobs.each do |job| %>
-          <tr>
-            <td><%= link_to job.title, job_path(job) %></td>
-            <td><%= job.company&.name %></td>
-            <td><%= job.status %></td>
-            <td><%= job.deadline %></td>
-            <td>
-              <%= link_to 'Show', job_path(job) %> |
-              <%= link_to 'Edit', edit_job_path(job) %> |
-              <%= button_to 'Delete', job_path(job), method: :delete, data: { confirm: 'Are you sure?' }, form: { class: 'd-inline' }, class: 'btn btn-link p-0' %>
-            </td>
-          </tr>
-        <% end %>
+        <%= render partial: "rows", locals: { jobs: @jobs } %>
       </tbody>
     </table>
+  <% else %>
+    <p>No job applications found.</p>
   <% end %>
 
-  <div class="text-center mt-5">
+  <div class="mt-4">
     <%= link_to "Return to Dashboard", dashboard_path, class: "btn btn-secondary" %>
   </div>
 </div>
