--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -59,7 +59,8 @@
     <p>No job applications found.</p>
   <% end %>
 
-  <div class="mt-4">
+  <div class="mt-4 d-flex justify-content-center">
     <%= link_to "Return to Dashboard", dashboard_path, class: "btn btn-secondary" %>
   </div>
+
 </div>
