--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New Job Application</h1>
-
-<%= render 'form', job: @job %>
-
-<%= link_to 'Back', dashboard_path %>
+<div class="container pt-3 pb-2" style="max-width: 800px;">
+  <h1 class="page-title mb-0">New Job Application</h1>
+  <%= render 'form', job: @job %>
+</div>
